--- a/io.github.divverent.aaaaxy.yml
+++ b/io.github.divverent.aaaaxy.yml
@@ -33,9 +33,9 @@ modules:
       - type: git
         url: https://github.com/divVerent/aaaaxy
         # --- TAG GOES HERE ---
-        tag: v1.3.421
+        tag: v1.3.436
         # --- REV GOES HERE ---
-        commit: 05842708556623267f1476a305a782c406c3b3bf
+        commit: 76562542c83400978876f7fed59d8fd867870ace
       - type: file
         path: modules.txt
         dest: vendor
@@ -61,8 +61,8 @@ modules:
         dest: vendor/github.com/dchest/jsmin
       - type: git
         url: https://github.com/ebitengine/purego
-        tag: v0.3.1
-        commit: e8cf67ef8a0258337badacb751f6db00a9ea66b2
+        tag: v0.4.0-alpha.2
+        commit: e1459079498f0551770af3cedc2903b3f3e3c7b2
         dest: vendor/github.com/ebitengine/purego
       - type: git
         url: https://github.com/emirpasic/gods
@@ -95,14 +95,13 @@ modules:
         commit: 3043a050f148a588e7e0c84dce27579dfe17fd2d
         dest: vendor/github.com/google/licenseclassifier
       - type: git
-        url: https://github.com/hajimehoshi/ebiten
-        tag: v2.5.0
-        commit: acf05b8d2bd24d6dec20c23ef1b2aff2e3e0b3e2
+        url: https://github.com/divVerent/ebiten
+        tag: v2.5.1-with-574925cf7a72deaf73be4c481348a7a44f7b7e19-and-cc247962703eba99eae732876496375191f16cbe
+        commit: af0411f6e81d59926ebd0a501d2d8a2b17ae3e33
         dest: vendor/github.com/hajimehoshi/ebiten/v2
       - type: git
         url: https://github.com/hajimehoshi/oto
-        tag: v2.4.0
-        commit: 97067266a35d83b2c907763454650600dcf39f06
+        commit: 31c83ff4311d35cd704044d4d45ea20359104cf2
         dest: vendor/github.com/hajimehoshi/oto/v2
       - type: git
         url: https://github.com/inconshreveable/mousetrap
@@ -215,8 +214,8 @@ modules:
         dest: vendor/golang.org/x/exp
       - type: git
         url: https://go.googlesource.com/image
-        tag: v0.6.0
-        commit: b6ac75bc5918c3a0a2200faa20aedebc76d5b349
+        tag: v0.7.0
+        commit: ed5dba0ea28f9438e4dac0320f7d9bb2fddd9737
         dest: vendor/golang.org/x/image
       - type: git
         url: https://go.googlesource.com/mobile
@@ -224,13 +223,13 @@ modules:
         dest: vendor/golang.org/x/mobile
       - type: git
         url: https://go.googlesource.com/mod
-        tag: v0.9.0
-        commit: 69aa7acea306dfd277ec48fcc687ef8fa0f2bdb4
+        tag: v0.10.0
+        commit: ad6fd61f94f8fdf6926f5dee6e45bdd13add2f9f
         dest: vendor/golang.org/x/mod
       - type: git
         url: https://go.googlesource.com/net
-        tag: v0.8.0
-        commit: dfa2b5dffd96fb2ae13e7d182501f0bce044a0a4
+        tag: v0.9.0
+        commit: 694cff8668bac64e0864b552bffc280cd27f21b1
         dest: vendor/golang.org/x/net
       - type: git
         url: https://go.googlesource.com/sync
@@ -239,18 +238,18 @@ modules:
         dest: vendor/golang.org/x/sync
       - type: git
         url: https://go.googlesource.com/sys
-        tag: v0.6.0
-        commit: c7a1bf9a0b0aa7c0c0e35a435924dd68e64d1653
+        tag: v0.7.0
+        commit: 64840c112d2335ed9874114aed48f946e778a769
         dest: vendor/golang.org/x/sys
       - type: git
         url: https://go.googlesource.com/text
-        tag: v0.8.0
-        commit: 9db913aaf20ced01b7a130d9fb222d74a1339fa6
+        tag: v0.9.0
+        commit: 48e4a4a957429d31328a685863b594ca9a06b552
         dest: vendor/golang.org/x/text
       - type: git
         url: https://go.googlesource.com/tools
-        tag: v0.7.0
-        commit: 031fc75960d487b0b15db12fb328676236a3a39c
+        tag: v0.8.0
+        commit: 5ef3193183ecbeb75ee5b12e4d0d76129ec4da3d
         dest: vendor/golang.org/x/tools
       - type: git
         url: https://gopkg.in/src-d/go-billy.v4
